TP LAB2 : modification des types de variables dans timer.c

--- a/celik_lab2_sys/celik_lab2_sys.html
+++ b/celik_lab2_sys/celik_lab2_sys.html
@@ -67,7 +67,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   </table>
   <table class="blueBar">
    <tr>
-    <td class="l">2024.01.16.22:33:57</td>
+    <td class="l">2024.01.24.02:20:48</td>
     <td class="r">Datasheet</td>
    </tr>
   </table>
@@ -309,7 +309,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">initializationFileName</td>
-        <td class="parametervalue">onchip_mem.hex</td>
+        <td class="parametervalue">C:/Users/rama_/OneDrive/Documents/Dossier RAMA/Polytech Clermont-Ferrand/GE5A/Semestre 9/ESN11/lab2/software/app/mem_init/celik_lab2_sys_RAM0.hex</td>
        </tr>
        <tr>
         <td class="parametername">enPRInitMode</td>
@@ -579,7 +579,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">width</td>
-        <td class="parametervalue">8</td>
+        <td class="parametervalue">4</td>
        </tr>
        <tr>
         <td class="parametername">clockRate</td>
@@ -648,7 +648,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">DATA_WIDTH</td>
-        <td class="parametervalue">8</td>
+        <td class="parametervalue">4</td>
        </tr>
        <tr>
         <td class="parametername">DO_TEST_BENCH_WIRING</td>
@@ -777,7 +777,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">width</td>
-        <td class="parametervalue">8</td>
+        <td class="parametervalue">4</td>
        </tr>
        <tr>
         <td class="parametername">clockRate</td>
@@ -846,7 +846,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">DATA_WIDTH</td>
-        <td class="parametervalue">8</td>
+        <td class="parametervalue">4</td>
        </tr>
        <tr>
         <td class="parametername">DO_TEST_BENCH_WIRING</td>
@@ -975,7 +975,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">width</td>
-        <td class="parametervalue">8</td>
+        <td class="parametervalue">4</td>
        </tr>
        <tr>
         <td class="parametername">clockRate</td>
@@ -1044,7 +1044,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">DATA_WIDTH</td>
-        <td class="parametervalue">8</td>
+        <td class="parametervalue">4</td>
        </tr>
        <tr>
         <td class="parametername">DO_TEST_BENCH_WIRING</td>
@@ -2555,8 +2555,8 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   </div>
   <table class="blueBar">
    <tr>
-    <td class="l">generation took 0,00 seconds</td>
-    <td class="r">rendering took 0,05 seconds</td>
+    <td class="l">generation took 0,02 seconds</td>
+    <td class="r">rendering took 0,13 seconds</td>
    </tr>
   </table>
  </body>
